Ensure top-level configs (not nested objects) are settable

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -27,15 +27,18 @@
     <p>Lorem ipsum dolor</p>
   </div>
 
-<script type="text/javascript" src="/dist/bundled.min.mapped.js"></script>
+<script type="text/javascript" src="/dist/bundled.min.js"></script>
 <script type="text/javascript">
 
   var opts = {
+    containerClass: "CCC",
+    tooltipClass: "TT-KLASS",
+    activeClass: "ACTIVE-KLASS",
     placeClass: {
-      // top: 'tip-top',
+      top: 'tip-top',
       left: 'tip-left',
-      // right: 'tip-right',
-      // bottom: 'tip-bottom'
+      right: 'tip-right',
+      bottom: 'tip-bottom'
     },
     typeClass: {
       dark: 'tt-dark',
