Karma & tests, package.json updates

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -27,7 +27,7 @@
     <p>Lorem ipsum dolor</p>
   </div>
 
-<script type="text/javascript" src="/dist/bundled.min.js"></script>
+<script type="text/javascript" src="/dist/bundled.js"></script>
 <script type="text/javascript">
 
   var opts = {
@@ -49,7 +49,7 @@
       place: 'bottom',
       offsetX: 32,
       offsetY: 32,
-      classes: ['YOLOLOLO'],
+      classes: ['YOLOLOLO', 'biggiesmallz'],
       target: 'SHOULD NOT BE SET',
       effect: 'SHOULD NOT BE SET',
     }
