Relative paths in demo page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>internetips :: stupid simple tooltips</title>
-  <link rel="stylesheet" type="text/css" href="/dist/style.css" />
+  <link rel="stylesheet" type="text/css" href="dist/style.css" />
 </head>
 
 <body>
@@ -11,6 +11,6 @@
     test page
   </p>
 
-<script type="text/javascript" src="/dist/bundled.min.js"></script>
+<script type="text/javascript" src="dist/bundled.min.js"></script>
 </body>
 </html>
